<resources>
    <string name="app_name">TapTapTap</string>
    <string name="title_activity_main_landing">MainLandingActivity</string>

    <!-- For Main Landing Strings -->
    <string name="new_game">New Game</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="how_to_play_label">How To Play</string>
    <string name="how_to_navigate">"To get started, read the instructions in \"How To Play\", or choose between one of the three game modes:"
    "\n\nSingle Word - A single word game"
    "\nMultiple Words - A game with a few words"
    "\nParagraph - A game with a TON of words"
        "\n\nTo add customized phrases to the various game modes select \"Add Words\" in the Main Menu."
    "\n\nTo change settings select the Settings from the toolbar at the top right"
    </string>
    <string name="add_words_label">Add Words</string>
    <string name="edit_dictionaries">Edit Dictionaries</string>


    <!-- For Game Type Strings -->
    <string name="single_word">Single Word</string>
    <string name="multiple_words">Multiple Words</string>
    <string name="paragraph">Paragraph</string>

    <!-- For Game Over Strings -->
    <string name="retry">Retry</string>
    <string name="return_main_manu">Return to Main Menu</string>

    <!-- Under Construction -->
    <string name="under_construction_text">Hello, this feature is currently under construction and will be implemented later</string>

    <!-- Settings -->
    <string name="sound">Sound</string>
    <string name="swype">Swype</string>
    <string name="word_prediction">Word Prediction</string>
    <string name="capitalize_first_letter">Capitalize First Letter</string>
    <string name="show_keyboard_immediately">Show Keyboard Immediately</string>
    <string name="about">About</string>
    <string name="reset_game_dictionary_key">reset_dictionary</string>
    <string name="reset_game_dictionary_title">Reset Game Dictionaries</string>
    <string name="reset_game_dictionary_summary">Resets all the words in the game dictionaries with default values</string>
    <string name="reset_high_score_key">reset_high_score</string>
    <string name="reset_high_score_title">Reset High Scores</string>
    <string name="reset_high_score_summary">Deletes all high scores</string>

    <!-- Difficulties -->
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <!-- Text Sizes -->
    <string name="small_size">Small</string>
    <string name="medium_size">Medium</string>
    <string name="large_size">Large</string>

    <!-- Orientations -->
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>

    <!-- Add Words Game Type Activity -->
    <string name="add_single_word">Add Single Word</string>
    <string name="add_multiple_words">Add Multiple Words</string>
    <string name="add_paragraph">Add Paragraph</string>

    <!-- Add Words Activity -->
    <string name="enter_words">Enter the word(s) you would like to save</string>
    <string name="save">Save</string>
    <string name="max_chars">Max characters allowed: </string>

    <!-- How to play -->
    <string name="how_to_play_text">"Welcome to TapTapTap, an App designed to test and improve your texting skills."
                "\nRules:"
                "\n1) The game begins after a game mode has been selected and any character is typed."
                "\n2) The game ends once the phrase is complete."
                "\n3) Type correct letters to gain points. Each correct letter is worth 1 point and each letter removed is worth -1 point. The score cannot be negative."
                "\n4) Correctly typed words award bonus points on completion of the phrase."
                "\n5) GWAM (Gross Words A Minute) statistics for all words and correctly typed words are displayed after completion."
                "\n6) The value for Gross Correct Words A Minute determines a score multiplier, so type as many words correctly as possible!"
                "\n7) Have fun :)"</string>
    <string name="about_desc">"TapTapTap is a typing game aimed toward increasing texting profiency for all "
                "users in a fun and exciting way. The app determines users' GWAM (Gross Words A Minute) and scores users' "
                "based on their performance. The users can analyze their GWAM history in order to "
                "improve their texting ability and monitor progress."
                "\n\n\n\nTapTapTap is an Android game developed for the CS 371m Mobile Computing course at The University of Texas at Austin."
                "\n\nFrank Cerasoli has been a student at the University of Texas since 2011. On May 21st, 2016, he will receive Bachelor of Science "
                "degrees in Physics and Computer Science. His interests, aside from academia, include rock climbing, playing piano, and building LASERs."
                "After graduation, Frank hopes to pursue a PhD in material science or high energy physics."
                "\n\nRafik Rizik: Currently a senior at UT Austin, Rafik will be graduating Fall 2017 with a degree in Computer Science. "
                "In his free time, Rafik enjoys spending time with his friends, playing video games and swimming."
                "\n\nJeremy Wenzel: As a senior at UT Austin, Jeremy will be graduating in Spring 2016 with a degree in Computer Science. "
                "When he is not coding up exciting projects, Jeremy enjoys playing sports, lifting weights, and playing video games with his friends. "
                "In August of 2016, he will begin working at Alarm.com as Software Engineer."
                </string>
</resources>
