<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:id="@+id/sound"
        android:key="sound"
        android:title="Sound"
        android:defaultValue="true"
        android:summary="Turn the sound on or off"/>

    <CheckBoxPreference
        android:id="@+id/capitalization"
        android:key="capitalization"
        android:title="@string/capitalize_first_letter"
        android:defaultValue="true"
        android:summary="Capitalize the first letter of the phrase"/>

    <CheckBoxPreference
        android:key="show_keyboard"
        android:title="@string/show_keyboard_immediately"
        android:defaultValue="true"
        android:summary="Show the keyboard immediately when starting a game"/>

    <ListPreference
        android:key="difficulty_level"
        android:title="Difficulty Level"
        android:summary=""
        android:defaultValue="@string/easy"
        android:entries="@array/list_difficulty_level"
        android:entryValues="@array/list_difficulty_level"/>

    <ListPreference
        android:key="text_size"
        android:title="Text Size"
        android:summary=""
        android:defaultValue="@string/medium_size"
        android:entries="@array/list_text_size"
        android:entryValues="@array/list_text_size"/>

    <ListPreference
        android:key="orientation_pref"
        android:title="Orientation"
        android:defaultValue="@string/portrait"
        android:entries="@array/list_orientation"
        android:entryValues="@array/list_orientation"/>

    <Preference
        android:key="@string/reset_game_dictionary_key"
        android:title="@string/reset_game_dictionary_title"
        android:summary="@string/reset_game_dictionary_summary"/>

    <Preference
        android:key="@string/reset_high_score_key"
        android:title="@string/reset_high_score_title"
        android:summary="@string/reset_high_score_summary"/>

</PreferenceScreen>