<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs371m.taptaptap.MainLandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:id="@+id/new_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:layout_weight="0.10"
            android:textSize="24dp" />
        <Button
            android:id="@+id/high_scores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/high_scores"
            android:layout_weight="0.10"
            android:textSize="24dp" />
        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_weight="0.10"
            android:textSize="24dp" />
    </LinearLayout>

</RelativeLayout>
