<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs371m.taptaptap.AddWordsGameTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:id="@+id/add_single_word_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/add_single_word"
            android:textSize="24dp"
            android:onClick="addSingleWord"/>
        <Button
            android:id="@+id/add_multiple_words_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/add_multiple_words"
            android:textSize="24dp"
            android:onClick="addMultipleWords"/>
        <Button
            android:id="@+id/add_paragraph_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:text="@string/add_paragraph"
            android:textSize="24dp"
            android:onClick="addParagraph"/>
    </LinearLayout>

</RelativeLayout>
