<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cs371m.taptaptap.GameOverActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/game_over_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Stats stuff goes here"
            android:layout_weight="0.50" />

        <Button
            android:id="@+id/game_over_new_game_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/new_game"
            android:onClick="startNewGame"/>
        <Button
            android:id="@+id/retry"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/retry"
            android:onClick="retry"/>
        <Button
            android:id="@+id/return_main_menu"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/return_main_manu"
            android:onClick="returnToMainMenu"/>

    </LinearLayout>

</RelativeLayout>
